plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.systemmonitor'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
    modularity.inferModulePath = true  
}

javafx {
    version = "23"  
    modules = [ 'javafx.controls', 'javafx.graphics' ]
}

dependencies {
    implementation 'com.github.oshi:oshi-core:6.4.0'
    implementation 'net.java.dev.jna:jna:5.13.0'
    implementation 'net.java.dev.jna:jna-platform:5.13.0'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.3'
    
    
}

application {
    mainClass = 'com.systemmonitor.SystemMonitor'
    applicationDefaultJvmArgs = [
        '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
        '-Dglass.platform=macosx',
        '-Dprism.order=sw'  
    ]
}